--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-    background-color: aliceblue;
+    background-color: rgb(47, 126, 194);
     margin-top: 100px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: aliceblue;
+
    
 }
 .input_wrapper {
